# ANNExample

./: README.md
01-make/: Makefile  README.md
01-make/src/: main.c
02-cmake/: CMakeLists.txt  README.md
02-cmake/src/: main.c
03-handwrittendigits_recognition/: .gitignore  Makefile  README.md  conf.nn
03-handwrittendigits_recognition/src/: dataset.c  dataset.h  main.c  nn.c  nn.h  sdl.c  sdl.h
